examples/test/testpolicy9748.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9748
  namespace: namespace183
spec:
  podSelector:
    matchLabels:
      key39: value10
      key8: value17
      key32: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value4
          key17: value8
          key44: value45
      podSelector:
        matchLabels:
          key8: value16
          key11: value28
          key40: value39
